--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,32 @@ android {
             }
         }
     }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        staging {
+            proguardFile 'proguard-rules.pro'
+            applicationIdSuffix ".staging"
+            versionNameSuffix "-staging"
+//            buildConfigField("String", "FIREBASE_APP_ID", "\"FIREBASE_ID_HERE\"")
+        }
+        production {
+            proguardFile 'proguard-rules.pro'
+//            buildConfigField("String", "FIREBASE_APP_ID", "\"FIREBASE_ID_HERE\"")
+        }
+    }
+
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [crashlyticsEnabled: true]
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [crashlyticsEnabled: false]
         }
     }
 
@@ -59,7 +81,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
